Update completion files paths for non-editor components as well

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -145,8 +145,8 @@
     
     -if user.is_authenticated
       %temba-store(
-        completions="/mr/docs/completion.json"
-        functions="/mr/docs/functions.json"
+        completions="/mr/docs/{{ LANGUAGE_CODE }}/completion.json"
+        functions="/mr/docs/{{ LANGUAGE_CODE }}/functions.json"
         fields="/api/v2/fields.json"
         globals="/api/v2/globals.json")
 
