Added horizontal scroll on page overflow

--- a/templates/flowimages/flowimage_list.haml
+++ b/templates/flowimages/flowimage_list.haml
@@ -199,6 +199,11 @@
       padding-left: 14px !important;
     }
 
+    .page-content {
+      overflow-x: auto;
+      padding-right: 2px;
+    }
+
 -block extra-script
   {{ block.super }}
 
