--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -9,6 +9,14 @@
       display: block;
     }
 
+    .table-container {
+      overflow-x: auto;
+      max-width: calc(100vw - 330px);
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+      border-radius: 0.5rem;
+      margin: 0 2.5px;
+    }
+
 -block page-title
   {{title}}
 
@@ -170,81 +178,80 @@
             %form#search-form.mb-4(method="get")
               %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
 
-            -block message-list
-              %table.list.object-list.lined{class: '{% if org_perms.msgs.msg_update or org_perms.msgs.broadcast_send %}selectable{% endif %}'}
-                %tbody
-                  -for object in object_list
-                    %tr.sms.object-row{id: 'id-row-{{object.id}}', data-object-id:'{{ object.id }}',
-                                  data-sender-id:'{{object.contact.id}}', data-sender-uuid:'{{object.contact.uuid}}', onrowclick:'handleRowClick("{{object.contact.uuid}}")'}
-                      -if actions
-                        - if org_perms.msgs.msg_update or org_perms.msgs.broadcast_send
-                          %td.checkbox.sms.object-row-check
-                            %temba-checkbox{onclick:"handleRowSelection(this)"}
-                      %td.whitespace-no-wrap
+            .table-container
+              -block message-list
+                %table.list.object-list.lined{class: '{% if org_perms.msgs.msg_update or org_perms.msgs.broadcast_send %}selectable{% endif %}'}
+                  %tbody
+                    -for object in object_list
+                      %tr.sms.object-row{id: 'id-row-{{object.id}}', data-object-id:'{{ object.id }}',
+                                    data-sender-id:'{{object.contact.id}}', data-sender-uuid:'{{object.contact.uuid}}', onrowclick:'handleRowClick("{{object.contact.uuid}}")'}
+                        -if actions
+                          - if org_perms.msgs.msg_update or org_perms.msgs.broadcast_send
+                            %td.checkbox.sms.object-row-check
+                              %temba-checkbox{onclick:"handleRowSelection(this)"}
+                        %td.whitespace-no-wrap
                           {{ object.contact|short_name:user_org }}
-                      %td.w-full
-                        .flex.flex-wrap.flex-end.items-center.justify-end
-                          .flex-grow.inline
-                            {% get_value object 'text' %}
-                          .labels.flex.items-center.flex-wrap
-                            -if 'label' in actions
-                              -for label in object.labels.all
-                                .lbl.linked.ml-2{onclick:"goto(event, this)", href:"{% url 'msgs.msg_filter' label.uuid %}", data-id: '{{label.id}}'}                                
-                                  {{label.name}}
+                        %td.w-full
+                          .flex.flex-wrap.flex-end.items-center.justify-end
+                            .flex-grow.inline
+                              {% get_value object 'text' %}
+                            .labels.flex.items-center.flex-wrap
+                              -if 'label' in actions
+                                -for label in object.labels.all
+                                  .lbl.linked.ml-2{onclick:"goto(event, this)", href:"{% url 'msgs.msg_filter' label.uuid %}", data-id: '{{label.id}}'}
+                                    {{label.name}}
 
-                        -if object.attachments
-                          .value-attachments{ style:"margin-top: 5px" }
-                            - for attachment in object.attachments
-                              {% attachment_button attachment %}
+                          -if object.attachments
+                            .value-attachments{ style:"margin-top: 5px" }
+                              - for attachment in object.attachments
+                                {% attachment_button attachment %}
 
-                      %td
-                        .flex.w-full.items-end.justify-end.pr-4
-                          .time.whitespace-no-wrap
-                            {% short_datetime object.created_on %}
+                        %td
+                          .flex.w-full.items-end.justify-end.pr-4
+                            .time.whitespace-no-wrap
+                              {% short_datetime object.created_on %}
 
-                          -if show_channel_logs and not user_org.is_anon or perms.contacts.contact_break_anon
-                            .log-icon.ml-3.text-gray-400.linked
-                              {% channel_log_link object %}
+                            -if show_channel_logs and not user_org.is_anon or perms.contacts.contact_break_anon
+                              .log-icon.ml-3.text-gray-400.linked
+                                {% channel_log_link object %}
 
-                  -if not object_list
-                    %tr.empty_list
-                      %td{ colspan:'99' }
-                        -trans "No messages"
+                    -if not object_list
+                      %tr.empty_list
+                        %td{ colspan:'99' }
+                          -trans "No messages"
 
-              - block paginator
-                -if object_list.count
-                  -block search-details
-                    .flex.mx-4.mt-3.mb-16
-                      .text-gray-700
-                        -if not paginator or paginator.num_pages <= 1                        
-                          -if search
-                            -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
-                              Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
-                              -plural
-                                Found {{ results_count }} messages in last 90 days matching <i>{{search}}</i>.
-                          -else
-                            -if start_date
-                              -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
-                                {{ results_count }} message since {{ start_date}}.
-                                -plural
-                                  {{ results_count }} messages since {{ start_date}}.
+            - block paginator
+              -block search-details
+                .flex.mx-4.mt-3.mb-16
+                  .text-gray-700
+                    -if not paginator or paginator.num_pages <= 1
+                      -if search
+                        -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
+                          Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
+                          -plural
+                            Found {{ results_count }} messages in last 90 days matching <i>{{search}}</i>.
+                      -else
+                        -if start_date
+                          -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
+                            {{ results_count }} message since {{ start_date}}.
+                            -plural
+                              {{ results_count }} messages since {{ start_date}}.
 
-                        - else
+                    - else
+                      -if search
+                        -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count
+                          Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
+                          -plural
+                            {{ start }} - {{ end }} of {{ results_count }} results for <i>{{search}}</i> since {{start_date}}.
+                      -else
+                        -if start_date
+                          -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count
+                            {{ results_count }} message since {{ start_date}}.
+                            -plural
+                              {{ start }} - {{ end }} of {{ results_count }} messages since {{ start_date}}.
 
-                          -if search
-                            -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count 
-                              Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
-                              -plural
-                                {{ start }} - {{ end }} of {{ results_count }} results for <i>{{search}}</i> since {{start_date}}.
-                          -else
-                            -if start_date
-                              -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count 
-                                {{ results_count }} message since {{ start_date}}.
-                                -plural
-                                  {{ start }} - {{ end }} of {{ results_count }} messages since {{ start_date}}.
-                                    
-                      .flex-grow
-                        -include "includes/pages.html"
+                  .flex-grow
+                    -include "includes/pages.html"
         -else
           -include "msgs/empty_include.html"
 
