--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -6,7 +6,7 @@
   .search-details
 
 -block message-list
-  %table.mt-4.object-list.list.lined
+  %table.object-list.list.lined
     %tbody
       -for broadcast in pending_broadcasts
         %tr.broadcast
@@ -65,10 +65,10 @@
           %td{ colspan:'99' }
             -trans "No matching messages."
 
-  -block paginator
-    -if object_list.count
-      .paginator
-        -include "includes/pagination.haml"
+-block paginator
+  -if object_list.count
+    .paginator
+      -include "includes/pagination.haml"
 
 -block extra-style
   {{ block.super }}
