Fixed lookups issues.

--- a/templates/orgs/org_giftcards.haml
+++ b/templates/orgs/org_giftcards.haml
@@ -8,7 +8,7 @@
   .title-icon
     %span{class: "glyph {{ icon_slug }}"}
 
--block title-text
+-block title
   .title-text
     %h1 {{ view_title }} Collections
 
